[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TempoTexto" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ExibirNome" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ExibirVariaveis" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="TempoTexto" to="." method="_on_TempoTexto_timeout"]
[connection signal="timeout" from="ExibirNome" to="." method="_on_ExibirNome_timeout"]
[connection signal="timeout" from="ExibirVariaveis" to="." method="_on_ExibirVariaveis_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
